[workspace]
members = ["orchestrator", "cosmos_gravity", "cosmos_gravitynft", "ethereum_gravity", "ethereum_gravitynft", "gravity_utils", "test_runner", "relayer", "gbt", "metrics_exporter"]
default-members = ["gbt"]
resolver = "2"

[workspace.dependencies]
gravity_proto = {package="gravity_proto", version="0.5.0", path = "../../proto/gravity_proto"}
num256 = "0.5"
clarity = "1.2.3"
web30 = "1.1.2"
deep_space = {package="deep_space", version="2.24", path = "../../deep_space"}
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"